force-app/main/default/objects/EBD_Financial__c/EBD_Financial__c.object-meta.xml
<CustomObject>
    <label>EBD Financial</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>EBD Financial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBD Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>