force-app/main/default/objects/EBD_Financial__c/fields/Membership_Surest__c.field-meta.xml
<CustomField>
    <fullName>Membership_Surest__c</fullName>
    <label>Membership - Surest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>