force-app/main/default/objects/EBD_Financial__c/fields/Membership_Total__c.field-meta.xml
<CustomField>
    <fullName>Membership_Total__c</fullName>
    <label>Membership - Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>