force-app/main/default/objects/EBD_Financial__c/fields/Revenue_Surest__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Surest__c</fullName>
    <label>Revenue - Surest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>