force-app/main/default/objects/EBD_Financial__c/fields/Revenue_Total__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Total__c</fullName>
    <label>Revenue - Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>