force-app/main/default/objects/EBD_Financial__c/fields/Revenue_Total_UHG__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Total_UHG__c</fullName>
    <label>Revenue Total UHG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>