force-app/main/default/objects/EBD_Financial__c/fields/Revenue_URS__c.field-meta.xml
<CustomField>
    <fullName>Revenue_URS__c</fullName>
    <label>Revenue URS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>